BORDERS GO BRRR

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                             </div>
                             <div class="about-text">
                                 <p>
-                                    I’m Diego, a 23-year-old Game Programmer and Software Engineer with a Master's degree in Game Development and a Bachelor’s Degree in Computer Science.
-                                    I’m skilled in Unreal Engine and Unity, with proficiency in C++ and C#.
+                                    I’m Diego, a 23-year-old <b>Game Programmer</b> and <b>Software Engineer</b> with a Master's Degree in Game Development and a Bachelor’s Degree in Computer Science.
+                                    I’m skilled in <b>Unreal Engine</b> and <b>Unity</b>, with proficiency in <b>C++</b> and <b>C#</b>.
                                 </p>
                                 <p>
                                     I started playing video games when I was five years old, with a computer disc that included Pac-Man, Tetris, and Space Invaders.
