--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
 
         <!-- Template Stylesheet -->
         <link href="css/style.css" rel="stylesheet">
+
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
     </head>
 
     <body data-spy="scroll" data-target=".navbar" data-offset="51">
@@ -781,8 +787,35 @@
                 <span class="close-popup" onclick="closeProjectPopup()">&times;</span>
                 <div class="popup-header">
                     <div class="project-popup-video">
-                        <iframe width="560" height="315" src="https://www.youtube.com/watch?v=krxlX8XpaKI&t=3s&ab_channel=LittleKeepers" frameborder="0" allowfullscreen></iframe>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/krxlX8XpaKI?si=_ylPS2VZIfv5vy13" frameborder="0" allowfullscreen></iframe>
                     </div>
+                    <!-- 
+                      <div class="popup-carousel">
+                        <div id="imageCarousel" class="carousel slide" data-ride="carousel">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="img/LK_banner.png" alt="Image 1">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="img/SV_banner.png" alt="Image 2">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="img/NL_banner.png" alt="Image 3">
+                                </div>
+                            </div>
+                            <a class="carousel-control-prev" href="#imageCarousel" role="button" data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#imageCarousel" role="button" data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>
+                    </div>  
+                    -->
+                    
+
                 </div>
                 <div class="popup-body">
                     <div class="popup-text">
