--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
                         <a href="#experience" class="nav-item nav-link">Experience</a>
                         <a href="#portfolio" class="nav-item nav-link">Portfolio</a>
                         <a href="#contact" class="nav-item nav-link">Contact</a>
+                        <div class="dark-mode-container">
+                            <button id="dark-mode-toggle" class="dark-mode-button"><i class="fa fa-moon"></i></button>
+                        </div>
                     </div>
                 </div>
             </div>
