Dark mode default

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <a href="#portfolio" class="nav-item nav-link">Portfolio</a>
                         <a href="#contact" class="nav-item nav-link">Contact</a>
                         <div class="dark-mode-container">
-                            <button id="dark-mode-toggle" class="dark-mode-button"><i class="fa fa-moon"></i></button>
+                            <button id="dark-mode-toggle" class="dark-mode-button"><i class="fa fa-sun"></i></button>
                         </div>
                     </div>
                 </div>
